# calc-riff

./: README.md
docs/: picocalc.monojson
jigs/poststation-rp2040/app/: Cargo.toml
jigs/poststation-rp2040/app/src/: main.rs
jigs/poststation-rp2040/icd/: Cargo.toml
jigs/poststation-rp2040/icd/src/: lib.rs
jigs/poststation-rp2040/rp2040/: Cargo.toml
jigs/poststation-rp2040/rp2040/src/: app.rs  handlers.rs  main.rs
