[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal-async = "1.0.0"
picocalc-jig-icd = { version = "0.1.0", path = "../icd", features = ["use-std"] }
poststation-sdk = "0.4.1"
rand = "0.8.5"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "time"] }

[profile.ci]
inherits = "dev"
debug = false
strip = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = false
codegen-units = 256
rpath = false
